<resources>
    <string name="app_name">Aina Wireless - Smart Button</string>
    <string name="services">Smart Button Services</string>
    <string name="btn_service">Button service (127BEEF&#8230;) value:</string>
    <string name="logo_desc">Aina Wireless Logo</string>
    <string name="red">RED ON</string>
    <string name="green">GREEN ON</string>
    <string name="amber">AMBER ON</string>
    <string name="off">OFF</string>
</resources>
